horizontal scrolling bug removed

--- a/public/stylesheets/postProject.css
+++ b/public/stylesheets/postProject.css
@@ -7,7 +7,6 @@
     margin: 0 auto;
     width: 80%;
     display: inline-block;
-    padding-top: 80px;
 }
 
 .project-post-image-links, .remove_imagelink_field, .add_imagelink_field_button {
